--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,8 @@
 :root {
-    --accent-color: linear-gradient(135deg, #0011ff, #a529d2, #ff15cc);
+  --accent-gradient: linear-gradient(135deg, #0011ff, #ae00ff, #ff006a);
+  --accent-color: #0088ff; 
 }
+
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -11,6 +13,18 @@ body {
     min-height: 100vh;
     overflow-x: hidden;
 }
+html {
+  scroll-behavior: smooth;
+}
+.nav-link-active {
+  color: var(--accent-color); 
+  font-weight: 600;
+}
+
+
+
+
+
 /* ---  --- */
 .section-heading {
     position: relative;
@@ -42,7 +56,7 @@ body {
     font-size: 3rem;
 }
 .heading span {
-    color: cyan;
+    color: var(--accent-color);
 }
 a {
     color: white;
@@ -54,31 +68,18 @@ a {
     align-items: center;
     margin-top: 1rem;
     background-color: #303030;
-    color: cyan;
+    color: var(--accent-color);
     font-size: 2rem;
     font-weight: 500;
     cursor: pointer;
     padding: 0.8rem 2rem;
     border-width: 2px;
     border-style: solid;
-    border-color: cyan;
+    border-color: var(--accent-color);
     border-image: initial;
     border-radius: 2px;
 }
 
-
-
-
-/* --- Navbar --- */
-.navbar {
-    display: flex;
-    gap: 20px;
-    padding: 20px;
-    margin-bottom: 1rem;
-    background-color: #4a4a4a;
-    color: white;
-    font-size: 1.5rem;
-}
 
 
 
@@ -133,8 +134,8 @@ p {
     background-color: #303030;
     border-radius: 12px;
     padding: 15px 20px;
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
@@ -153,7 +154,7 @@ p {
     inset: 0;
     padding: 2px;
     border-radius: 12px;
-    background: var(--accent-color);
+    background: var(--accent-gradient);
     -webkit-mask:
         linear-gradient(#fff 0 0) content-box,
         linear-gradient(#fff 0 0);
@@ -167,7 +168,7 @@ p {
     margin-bottom: 10px;
 }
 .skills-name {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 400;
     text-align: center;
 }
