--- a/static/global.css
+++ b/static/global.css
@@ -41,6 +41,15 @@ html {
 
 
 /* --- Heading --- */
+#bgCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;                 
+  pointer-events: none;       
+}
 .wrapper {
     position: relative;
     display: flex;
@@ -85,8 +94,20 @@ a {
     border-image: initial;
     border-radius: 2px;
 }
-
-
+@keyframes pulsate {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+.heading-btn:hover {
+    animation: pulsate 0.6s ease-in-out infinite;
+}
 
 
 
