--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,6 @@
 :root {
   --accent-gradient: linear-gradient(135deg, #0011ff, #ae00ff, #ff006a);
-  --accent-color: #7300ff; 
+  --accent-color: #ae00ff; 
 }
 
 
@@ -98,7 +98,13 @@ a {
     0% {
         transform: scale(1);
     }
+    25% {
+        transform: scale(1.05);
+    }
     50% {
+        transform: scale(1.1);
+    }
+    75% {
         transform: scale(1.05);
     }
     100% {
