--- a/static/global.css
+++ b/static/global.css
@@ -258,6 +258,9 @@ p {
     padding: 0.5rem;
     background: var(--accent-gradient);
     background-size: 300% 300%;
+    width: 100%;
+    aspect-ratio: 16/9;
+    height: auto;
     max-width: 1000px;
     animation: borderGradient 8s ease infinite;
     transition: transform 0.3s ease;
@@ -292,6 +295,32 @@ p {
     0% { background-position: 0% 50%; }
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
+}
+.slide {
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  bottom: 3px;
+  border-radius: 1rem;
+  z-index: 2;
+  overflow: hidden;
+
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s ease, visibility 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
 }
 
 /* Description */
@@ -341,17 +370,91 @@ p {
 
 
 
-
-
-
-
-
 /* --- Contact --- */
+
 .contact {
     width: 1500px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    padding: 5rem 2rem;
     flex-direction: column;
     align-items: center;
+    color: white;
+    text-align: center;
+}
+.contact-form {
+    width: 100%;
+    max-width: 500px;
+    background-color: #2c2c2c;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+
+}
+.form-slot {
+    margin-bottom: 1rem;
+}
+input,
+textarea {
+        width: 100%;
+        padding: 1rem 1.5rem;
+        background-color: #1b1b1b;
+        border: 2px solid transparent;
+        border-radius: 8px;
+        color: white;
+        font-size: 1rem;
+        outline: none;
+}
+input:focus,
+textarea:focus {
+    border-image: var(--accent-gradient) 1;
+    background-color: #252525;
+}
+.submit-btn {
+    position: relative;
+    display: inline-block;
+    padding: 0.9rem 2rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white;
+    background-color: none; /* Inner background */
+    border-radius: 8px;
+    cursor: pointer;
+    z-index: 0;
+    transition: transform 0.2s, box-shadow 0.2s;
+    overflow: hidden;
+}
+
+.submit-btn::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    padding: 2px; 
+    border-radius: 8px;
+    background: var(--accent-gradient);
+    -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+    -webkit-mask-composite: destination-out;
+        mask-composite: exclude;
+    z-index: -1;
+}
+
+.form-status {
+    margin-top: 1rem;
+    font-size: 1rem;
+    color: var(--accent-color);
+}
+
+.contact-form{
+    transform: translateY(-5px) scale(1.02);
+    box-shadow: 0 0 25px rgba(255, 0, 150, 0.3);
+}
+
+/* Gradient animation */
+@keyframes borderGradient {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
