--- a/static/global.css
+++ b/static/global.css
@@ -374,6 +374,7 @@ p {
 
 .contact {
     width: 1500px;
+    height: 800px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -398,7 +399,7 @@ p {
 input,
 textarea {
         width: 100%;
-        padding: 1rem 1.5rem;
+        padding: 0.9rem 1rem;
         background-color: #1b1b1b;
         border: 2px solid transparent;
         border-radius: 8px;
@@ -408,8 +409,11 @@ textarea {
 }
 input:focus,
 textarea:focus {
-    border-image: var(--accent-gradient) 1;
-    background-color: #252525;
+/*    border-image: var(--t-gradient) 1;*/
+    background-color: #343434;
+}
+textarea {
+    height: 150px;
 }
 .submit-btn {
     position: relative;
@@ -458,3 +462,67 @@ textarea:focus {
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
 }
+
+
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    background-color: #2c2c2c;
+    height: 150px;
+    border-top: 4px solid #242424;
+}
+.footer-link {
+    display: flex;
+    gap: 2rem;
+    max-width: 125px;
+    align-items: center;
+    justify-content: center;
+}
+.footer p {
+    margin-top: 15px;
+    font-size: 0.70rem;
+}
+.back-to-top {
+  position: absolute;
+  top: -35px;
+  transform: rotate(-90deg);
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 55px;
+  height: 55px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: var(--accent-color);
+  text-decoration: none;
+
+  background: transparent;
+  border-radius: 20%;
+  border: 3px solid; /* Thickness of border */
+
+  /* Apply gradient border */
+  border-image-slice: 1;
+  border-image-source: var(--accent-gradient);
+
+  box-sizing: border-box;
+  cursor: pointer;
+  z-index: 10;
+  transition: transform 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.back-to-top:hover {
+  color: #ff00c8;
+  box-shadow: 0 0 10px rgba(255, 0, 200, 0.4);
+}
+
+/*
+background: var(--accent-gradient);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
